...
            text: 'Privacidade',
            showDivider: true,
            onPress: handleEditPassword,
        },
        {
            icon: 'sign-out-alt',
            text: 'Sair',
            isDanger: true,
            onPress: handleSignOut,
        },
    ];

    const user = profile?.user;
...
